// Copyright 2020 JanusGraph Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package janusgraph.v1;

option java_multiple_files = true;
option java_outer_classname = "GraphManagerService";
option java_package = "org.janusgraph.graphdb.grpc";

message JanusGraphContext {
  string graph_name = 1;
}

message GetJanusGraphContextByGraphNameResponse {
  JanusGraphContext context = 1;
}

message GetJanusGraphContextByGraphNameRequest {
  string graph_name = 1;
}

message GetJanusGraphContextsResponse {
  repeated JanusGraphContext contexts = 1;
}

message GetJanusGraphContextsRequest {}

message GetVersionRequest {}

message GetVersionResponse {
  string janusgraph_version = 1;
  string tinkerpop_version = 2;
}

service JanusGraphManagerService {
  rpc GetJanusGraphContexts(GetJanusGraphContextsRequest) returns (GetJanusGraphContextsResponse);
  rpc GetJanusGraphContextByGraphName(GetJanusGraphContextByGraphNameRequest) returns (GetJanusGraphContextByGraphNameResponse);
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);
}
